# shell

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
shell_scripts/: wallpaper.py
shell_scripts/scripts/: save-wallpaper.ps1
